Add Employee() , Get Employee() Views

--- a/ASPNETMVCCRUD/appsettings.json
+++ b/ASPNETMVCCRUD/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=MARIANA-SSC;database=Gifter;integrated security=true;Trust Server Certificate=true"
+    "DefaultConnection": "server=MARIANA-SSC;database=MvcDemoDb;integrated security=true;Trust Server Certificate=true"
   }
 }
